# CAYT

./: README.md
cayt-backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.sh  test_download.py  test_stt.py
cayt-backend/app/: __init__.py  main.py
cayt-backend/app/models/: __init__.py  subtitle.py
cayt-backend/app/modules/: __init__.py  cache.py  context_manager.py  refiner.py  stt.py  subtitle_extractor.py  translator.py
cayt-backend/app/utils/: __init__.py  parsers.py
cayt-backend/config/: __init__.py  settings.py
cayt-backend/tests/: __init__.py  test_parsers.py
cayt-extension/: README.md  background.js  content.js  icon-generator.html  manifest.json  popup.html  popup.js  styles.css
