[project]
name = "cayt-backend"
version = "0.1.0"
description = "Context-Aware YouTube Translator - 맥락 기반 유튜브 자막 번역 백엔드"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["youtube", "subtitle", "translation", "llm", "fastapi"]

dependencies = [
    # Web Framework
    "fastapi>=0.109.0,<1.0.0",
    "uvicorn[standard]>=0.27.0,<1.0.0",
    # YouTube 자막 추출
    "yt-dlp>=2024.01.17",
    # 데이터 검증
    "pydantic>=2.5.3,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    # HTTP 클라이언트
    "httpx>=0.26.0,<1.0.0",
    # 유틸리티
    "python-dotenv>=1.0.0,<2.0.0",
    # LLM 번역
    "ollama>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "ruff>=0.1.0",        # 린터/포매터
    "mypy>=1.8.0",        # 타입 체크
]
# Phase 2 의존성 (추후 활성화)
phase2 = [
    # "faster-whisper>=0.10.0",
    # "langchain>=0.1.0",
]

[project.scripts]
cayt = "app.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "config"]

# ----------------
# 개발 도구 설정
# ----------------

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.isort]
known-first-party = ["app", "config"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
